assets/css/style.css
/* ... */
#home-hero-image-inner {
    width: 40vw;
    height: 40vw;
    margin-left: 35vw;
}

#home-hero-background-path {
    filter: blur(50px);
    opacity: .5;
    animation-name: hero;
    animation-duration: 10s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    transform: rotate(0deg);
    transform-origin: center;
}

@keyframes hero {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

#home-cards, #project-cards {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 20px;
}

.home-card, .project-card, .disclaimers-card {
    border-radius: 10px;
    border: 1px solid hsl(0, 0%, 18%);
    padding: 20px;
    text-decoration: none;
}

#home-cta {
    border-radius: 10px;
    border: 1px solid hsl(0, 0%, 18%);
    padding: 48px;
    margin-top: 50px;
    display: grid;
    grid-template-columns: 2.5fr 1fr;
    grid-gap: 80px;
}

#home-cta-buttons, #home-cta-orgs-btns {
    display: flex;
    gap: 16px;
    align-items: center;
}

#home-cta-left {
    display: flex;
    gap: 24px;
    flex-wrap: wrap;
    flex-direction: row;
}

#home-cta-right {
    display: flex;
    gap: 24px;
    flex-wrap: wrap;
    flex-direction: row;
}

#home-cta-orgs {
    color: hsl(0, 0%, 63%);
    font-size: 16px;
    line-height: 24px;
    font-weight: 500;
    letter-spacing: -.32px;
    flex: 1;
    flex-basis: 100%;
}

#home .title {
    margin-top: 10px;
    margin-bottom: 10px;
}

#home h2.home-section-title {
    margin-top: 50px;
}

#home-hero-cta, .request-cta {
    font-weight: initial;
    letter-spacing: initial;
    margin-top: 30px;
    width: max-content;
}

.home-card-header, .project-card-header, .disclaimers-card-header {
    color: hsl(0, 0%, 63%);
    display: flex;
    align-items: center;
    gap: 8px;
    flex: 1;
    flex-basis: 100%;
}

.home-card, .project-card, .disclaimers-card {
    gap: 16px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-items: start;
}

.home-card-content, .project-card-content, .disclaimers-card-content {
    flex: 1;
    flex-basis: 100%;
    color: hsl(0, 0%, 93%);
    font-size: 20px;
    line-height: 130%;
    letter-spacing: -.4px;
    font-weight: 600;
    text-wrap: balance;
}

#home-cta-title {
    font-size: 24px;
    font-weight: 500;
    line-height: 32px;
    letter-spacing: -.96px;
    text-wrap: balance;
    color: hsl(0, 0%, 63%);
    flex: 1;
    flex-basis: 100%;
}

#home-cta-title-focus, #home-cta-orgs-focus {
    font-weight: 600;
    color: hsl(0, 0%, 93%);
}

/* Disclaimers */
#disclaimers-header {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 20px;
    margin-bottom: 35px;
}

.disclaimers-card-listing {
    display: flex;
    align-items: center;
    gap: 5px;
}

.disclaimers-card-content {
    font-size: 1rem;
}

.text-section a[href].link, .text-section .linked a[href], .text-section.linked a[href] {
    color: inherit;
}

.text-section a[href].link:hover, .text-section .linked a[href]:hover, .text-section.linked a[href]:hover {
    opacity: .75;
}

blockquote {
    border-left: 2px solid currentColor;
    margin-left: 1rem;
    padding-left: 1rem;
}

.limited-width {
    max-width: 768px;
}

/* Mobile home page */
@media (max-width: 1140px) {
    #home-cards, #project-cards, #disclaimers-header {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 900px) {
    #home-hero-title-tagline {
        width: 100%;
    }

    #home-hero-cta {
        margin-left: auto;
        margin-right: auto;
    }

    #home-cards, #project-cards, #disclaimers-header {
        grid-template-columns: repeat(1, 1fr);
    }

    #home-hero-inner {
        grid-template-columns: 1fr;
        grid-template-rows: 1fr max-content;
        height: 100%;
    }

    #home-hero-title {
        position: initial;
        text-align: center;
    }

    #home-hero-title-headline {
        margin-left: auto;
        margin-right: auto;
    }

    #home-hero-text {
        justify-content: center;
    }

    #home-hero-image-inner {
        margin-left: auto;
        margin-right: auto;
        min-width: 400px;
        min-height: 400px;
    }

    #home-cta {
        grid-template-columns: 1fr;
    }
}

/* Footer */
#footer-inner {
    margin: auto;
    padding-left: 24px;
    padding-right: 24px;
    max-width: 1400px;
    display: grid;
    grid-template-columns: 1fr repeat(3, 1.5fr);
    gap: 24px;
    flex-wrap: wrap;
}

#footer-container {
    padding: 28px 24px 24px;
}

#footer-inner-general-icon {
    width: 24px;
    height: 24px;
}

#footer-inner-general {
    display: flex;
    padding-top: 8px;
    gap: 10px;
    flex-direction: row;
    flex-wrap: wrap;
}

#footer-inner-general-copyright, #footer-inner-general-version {
    color: #888;
    font-size: 0.875rem;
    font-weight: 400;
    line-height: 1.25rem;
}

#footer-inner-general-logo {
    text-decoration: none;
    display: flex;
    align-items: center;
    gap: 12px;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
}

#footer-inner-general-status-container {
    text-align: left;
    margin-right: auto;
    width: max-content;
    padding: 8px;
    margin-left: -8px;
    height: 18px;
    box-shadow: none;
    display: flex;
    gap: 6px;
    align-items: center;
    flex-direction: row;
    color: hsl(0, 0%, 56%);
    transition: color 150ms ease, background-color 150ms ease;
}

#footer-inner-general-status-container:not(:hover) {
    background-color: transparent;
}

#footer-inner-general-status-indicator, #contact-status-indicator {
    width: 10px;
    height: 10px;
    border-radius: 999px;
    background-color: hsl(0, 0%, 56%);
    display: inline-block;
    transition: background-color 150ms ease;
}

#footer-inner-general-status-text {
    font-size: 0.875rem;
    line-height: 1.25rem;
    font-weight: 300;
    flex: 1;
}
/* ... */

